--- a/interiorshop/static/styles/main.css
+++ b/interiorshop/static/styles/main.css
@@ -14,12 +14,17 @@
 /*login top*/
 .top{
     
-    border:5px solid black;
+    border:1px solid black;
     font-size: large;
     display: inline-block;
     color: whitesmoke;
     background: #444;
 
+}
+.top a{
+    padding: 2px;
+    text-decoration: none;
+    color:whitesmoke;
 }
 /**
 * Footer 
