--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -17,11 +17,11 @@ a {
 /*login top*/
 .top{
     
-    
+    border: 5px solid black;
     font-size: large;
     display: inline-block;
     color: whitesmoke;
-    background: rgb(153, 153, 153);
+    background: #444;
 
 }
 /**
